--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -13,7 +13,7 @@
 
 <style>
 	header {
-		height: 75vh;
+		height: calc(100vh - 250px);
 		z-index: -1;
 		display: block;
 		position: relative;
@@ -25,7 +25,7 @@
 		width: 100%;
 		object-fit: cover;
 		object-position: bottom;
-		bottom: 25vh;
+		bottom: 250px;
 	}
 
 	.sun {
