--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ let title = 'My Astro Site';
 
 		.background0 {
 			position: absolute;
-			bottom: 25vh;
+			bottom: 250px;
 			z-index: 1;
 			width: 100%;
 		}
