Revert "Remove vh fix attempt"
This reverts commit 7adf02c2053882f320830f5239acfe5cc3fd6714.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ let title = 'My Astro Site';
 
 		.background0 {
 			position: absolute;
-			bottom: 250px;
+			bottom: 25vh;
 			z-index: 1;
 			width: 100%;
 		}
