--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,9 +50,9 @@ let title = 'My Astro Site';
 
 	<script type="module">
 		document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
-		window.addEventListener('resize', () => {
-			document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
-		});
+		// window.addEventListener('resize', () => {
+		// 	document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
+		// });
 
 		const targets = document.querySelectorAll(".scroll");
 		// TODO: Only do this on desktop
