--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -13,7 +13,7 @@
 
 <style>
 	header {
-		height: calc(var(--vh, 1vh) * 75); /* 75vh; */ 
+		height: 75vh;
 		z-index: -1;
 		display: block;
 		position: relative;
@@ -21,11 +21,11 @@
 
 	header > img {
 		position: fixed;
-		height: calc(var(--vh, 1vh) * 100); /* 100vh; */
+		height: 100vh;
 		width: 100%;
 		object-fit: cover;
 		object-position: bottom;
-		bottom: calc(var(--vh, 1vh) * 25); /* 25vh; */
+		bottom: 25vh;
 	}
 
 	.sun {
