--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,10 +49,10 @@ let title = 'My Astro Site';
 	</style>
 
 	<script type="module">
-		document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
-		window.addEventListener('resize', () => {
-			document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
-		});
+		// document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
+		// window.addEventListener('resize', () => {
+		// 	document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
+		// });
 
 		const targets = document.querySelectorAll(".scroll");
 		// TODO: Only do this on desktop
