Max size 1920px and optimize all images (13.5MB to 1.6MB)

--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -1,8 +1,8 @@
 <div>
-	<img src="/assets/img/best-in-show.png" alt="Gotland Game Conference Award: Best in show" />
-	<img src="/assets/img/best-game-feel.png" alt="Gotland Game Conference Award: Best game feel" />
-	<img src="/assets/img/best-level-design.png" alt="Gotland Game Conference Award: Best level design" />
-	<img src="/assets/img/best-presentation.png" alt="Gotland Game Conference Award: Best presentation" />
+	<img src="/assets/img/best-in-show.webp" alt="Gotland Game Conference Award: Best in show" />
+	<img src="/assets/img/best-game-feel.webp" alt="Gotland Game Conference Award: Best game feel" />
+	<img src="/assets/img/best-level-design.webp" alt="Gotland Game Conference Award: Best level design" />
+	<img src="/assets/img/best-presentation.webp" alt="Gotland Game Conference Award: Best presentation" />
 </div>
 
 <style>
