--- a/src/components/Landing.astro
+++ b/src/components/Landing.astro
@@ -2,13 +2,13 @@
 
 ---
 <header>
-	<img class="backdrop" src="/assets/img/backdrop.png" alt="" role="presentation"/>
-	<img class="scroll background3" data-speed="6" src="/assets/img/bg3.png" alt="" role="presentation"/>
-	<img class="scroll background2" data-speed="3" src="/assets/img/bg2.png" alt="" role="presentation"/>
-	<img class="scroll background1" data-speed="1" src="/assets/img/bg1.png" alt="" role="presentation"/>
-	<img class="sun" src="/assets/img/sun.png" alt="" role="presentation"/>
-	<img class="fg" src="/assets/img/fg.png" alt="" role="presentation"/> 
-	<img class="crystal" src="/assets/img/crystal.png" alt="" role="presentation"/>
+	<img class="backdrop" src="/assets/img/backdrop.webp" alt="" role="presentation"/>
+	<img class="scroll background3" data-speed="6" src="/assets/img/bg3.webp" alt="" role="presentation"/>
+	<img class="scroll background2" data-speed="3" src="/assets/img/bg2.webp" alt="" role="presentation"/>
+	<img class="scroll background1" data-speed="1" src="/assets/img/bg1.webp" alt="" role="presentation"/>
+	<img class="sun" src="/assets/img/sun.webp" alt="" role="presentation"/>
+	<img class="fg" src="/assets/img/fg.webp" alt="" role="presentation"/> 
+	<img class="crystal" src="/assets/img/crystal.webp" alt="" role="presentation"/>
 </header>
 
 <style>
@@ -17,6 +17,8 @@
 		z-index: -1;
 		display: block;
 		position: relative;
+		max-width: 1920px;
+		margin: auto;
 	}
 
 	header > img {
@@ -26,6 +28,7 @@
 		object-fit: cover;
 		object-position: bottom;
 		top: -25vh;
+		max-width: 1920px;
 	}
 
 	.sun {
