--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,7 @@ let title = 'My Astro Site';
 		.background0 {
 			margin-top: -100%;
 			width: 100%;
+			padding-bottom: calc(2ch - 4px); 
 		}
 	</style>
 
