Add plausible analytics

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,6 +78,8 @@ let title = 'My Astro Site';
 
 	</style>
 
+
+
 	<script type="module">
 		// document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
 		// window.addEventListener('resize', () => {
@@ -96,6 +98,10 @@ let title = 'My Astro Site';
 			})
 		});
 	</script>
+
+	<script defer data-domain="amelitegame.com" src="https://plausible.io/js/plausible.js"></script>
+	<!-- If we want to enable localhost views -->
+	<!-- <script defer data-domain="amelitegame.com" src="https://plausible.io/js/plausible.local.js"></script> -->
 </head>
 <body>
 	<!-- <div class="wrapper"> -->
