--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -6,18 +6,18 @@
 </div>
 
 <style>
-div {
-	display: flex;
-	width: 100%;
-	gap: 2rem;
-	justify-content: center;
-	z-index: 10;
-	flex-wrap: wrap;
-}
+	div {
+		display: flex;
+		width: 100%;
+		gap: 2rem;
+		justify-content: center;
+		z-index: 10;
+		flex-wrap: wrap;
+		margin-bottom: 2rem;
+	}
 
-div > img {
-	max-width: 20%;
-}
-
+	div > img {
+		max-width: 20%;
+	}
 
 </style>
