Add some shadows

--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -9,7 +9,7 @@
 		background: linear-gradient( to right, #6fa720 5%, #588a1b 95%);
 		color: #fff;
 		text-decoration: none;
-		/* text-shadow: 1px 1px 2px rgba( 0, 0, 0, 0.7); */
+		text-shadow: 1px 1px 2px rgba( 0, 0, 0, 0.4);
 		border-radius: 4px;
 		display: flex;
 		align-items: center;
@@ -19,6 +19,7 @@
 
 	a:hover {
 		background: linear-gradient( to right, #8ed629 5%, #6aa621 95%);
+		box-shadow: 0 0 16px 0 #8ed62944;
 	}
 
 	img {
