--- a/src/components/DiscordButton.astro
+++ b/src/components/DiscordButton.astro
@@ -8,6 +8,7 @@
 		background-color: #7289da;
 		color: #fff;
 		text-decoration: none;
+		text-shadow: 1px 1px 2px rgba( 0, 0, 0, 0.4);
 		border-radius: 4px;
 		display: flex;
 		align-items: center;
@@ -17,6 +18,7 @@
 
 	a:hover {
 		background-color: #91a6f0;
+		box-shadow: 0 0 16px 0 #7289da44;
 	}
 
 	img {
