Add youtube embed

--- a/src/components/DiscordButton.astro
+++ b/src/components/DiscordButton.astro
@@ -16,7 +16,8 @@
 		margin-bottom: 1rem;
 	}
 
-	a:hover {
+	a:hover,
+	a:focus {
 		background-color: #91a6f0;
 		box-shadow: 0 0 16px 0 #7289da44;
 	}
