--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -1,5 +1,5 @@
 <a href="https://store.steampowered.com/app/1848220/Amelite/">
-	<span>Add to Wishlist on Steam</span>
+	<span>Wishlist on Steam</span>
 	<img src="/assets/img/steam-logo.png" alt="" role="presentation"/>
 </a>
 
@@ -17,7 +17,8 @@
 		margin-bottom: 1rem;
 	}
 
-	a:hover {
+	a:hover,
+	a:focus {
 		background: linear-gradient( to right, #8ed629 5%, #6aa621 95%);
 		box-shadow: 0 0 16px 0 #8ed62944;
 	}
