Recolor site & add screenshots & reorganize images

--- a/src/components/DiscordButton.astro
+++ b/src/components/DiscordButton.astro
@@ -1,14 +1,14 @@
 <a href="https://discord.com">
-	<span>Join our Discord</span>
+	<span>Discord</span>
 	<img src="/public/assets/img/discord-logo.svg" alt="" role="presentation">
 </a>
 <style>
 	a {
 		padding: 0.75em 1.25em;
-		background-color: #7289da;
+		background-color: #444;
 		color: #fff;
 		text-decoration: none;
-		text-shadow: 1px 1px 2px rgba( 0, 0, 0, 0.4);
+		text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 		border-radius: 4px;
 		display: flex;
 		align-items: center;
