--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -5,21 +5,23 @@
 
 <style>
 	a {
-		padding: 0.75em 1.25em;
-		background: linear-gradient( to right, #6fa720 5%, #588a1b 95%);
+		padding: 0.75em 2em;
+		background: linear-gradient(to right, #6fa720 5%, #588a1b 95%);
 		color: #fff;
 		text-decoration: none;
-		text-shadow: 1px 1px 2px rgba( 0, 0, 0, 0.4);
+		text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 		border-radius: 4px;
 		display: flex;
 		align-items: center;
 		width: fit-content;
-		margin-bottom: 1rem;
+		margin: auto;
+		margin-bottom: 3em;
+		font-size: 1.1em;
 	}
 
 	a:hover,
 	a:focus {
-		background: linear-gradient( to right, #8ed629 5%, #6aa621 95%);
+		background: linear-gradient(to right, #8ed629 5%, #6aa621 95%);
 		box-shadow: 0 0 16px 0 #8ed62944;
 	}
 
