--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -1,8 +1,8 @@
 <div>
-	<img src="/assets/img/best-in-show.webp" alt="Gotland Game Conference Award: Best in show" />
-	<img src="/assets/img/best-game-feel.webp" alt="Gotland Game Conference Award: Best game feel" />
-	<img src="/assets/img/best-level-design.webp" alt="Gotland Game Conference Award: Best level design" />
-	<img src="/assets/img/best-presentation.webp" alt="Gotland Game Conference Award: Best presentation" />
+	<img src="/assets/img/awards/best-in-show.webp"      alt="Gotland Game Conference Award: Best in show" />
+	<img src="/assets/img/awards/best-game-feel.webp"    alt="Gotland Game Conference Award: Best game feel" />
+	<img src="/assets/img/awards/best-level-design.webp" alt="Gotland Game Conference Award: Best level design" />
+	<img src="/assets/img/awards/best-presentation.webp" alt="Gotland Game Conference Award: Best presentation" />
 </div>
 
 <style>
@@ -13,11 +13,9 @@
 		justify-content: center;
 		z-index: 10;
 		flex-wrap: wrap;
-		margin-bottom: 2rem;
 	}
 
-	div > img {
-		max-width: 20%;
+	div img {
+		max-width: min(50%, 180px);
 	}
-
 </style>
