--- a/src/components/ParallaxHeader.astro
+++ b/src/components/ParallaxHeader.astro
@@ -2,13 +2,13 @@
 
 ---
 <header>
-	<img class="backdrop"                          src="/assets/img/backdrop.webp" alt="" role="presentation" draggable="false"/>
-	<img class="scroll background3" data-speed="6" src="/assets/img/bg3.webp" alt="" role="presentation" draggable="false"/>
-	<img class="scroll background2" data-speed="3" src="/assets/img/bg2.webp" alt="" role="presentation" draggable="false"/>
-	<img class="scroll background1" data-speed="1" src="/assets/img/bg1.webp" alt="" role="presentation" draggable="false"/>
-	<img class="sun"                               src="/assets/img/sun.webp" alt="" role="presentation" draggable="false"/>
-	<h1><img class="fg"                            src="/assets/img/fg.webp" alt="Amelite" title="Amelite" draggable="false"/></h1>
-	<img class="crystal"                           src="/assets/img/crystal.webp" alt="" role="presentation" draggable="false"/>
+	<img class="backdrop"                          src="/assets/img/parallax/backdrop.webp" alt="" role="presentation" draggable="false"/>
+	<img class="scroll background3" data-speed="6" src="/assets/img/parallax/bg3.webp" alt="" role="presentation" draggable="false"/>
+	<img class="scroll background2" data-speed="3" src="/assets/img/parallax/bg2.webp" alt="" role="presentation" draggable="false"/>
+	<img class="scroll background1" data-speed="1" src="/assets/img/parallax/bg1.webp" alt="" role="presentation" draggable="false"/>
+	<img class="sun"                               src="/assets/img/parallax/sun.webp" alt="" role="presentation" draggable="false"/>
+	<h1><img class="fg"                            src="/assets/img/parallax/fg.webp" alt="Amelite" title="Amelite" draggable="false"/></h1>
+	<img class="crystal"                           src="/assets/img/parallax/crystal.webp" alt="" role="presentation" draggable="false"/>
 </header>
 
 <style>
