Remove custom font, add fb and insta links

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -30,8 +30,8 @@ import DiscordButton from '../components/DiscordButton.astro';
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem excepturi in reprehenderit quo nemo aspernatur dicta, accusantium quibusdam ad, culpa eius illo similique ipsa cumque?
 		</p>
 		<ul class="socials">
-			<li><a href="#">Facebook</a></li>
-			<li><a href="#">Instagram</a></li>
+			<li><a href="https://www.facebook.com/amelite.sealhorsestudios/">Facebook</a></li>
+			<li><a href="https://www.instagram.com/amelite.sealhorsestudios/">Instagram</a></li>
 			<DiscordButton />
 		</ul>
 		<h2>Screenshots</h2>
@@ -46,15 +46,6 @@ import DiscordButton from '../components/DiscordButton.astro';
 </main>
 
 <style>
-	@font-face {
-		font-family: 'Diablogue';
-		src: url('/assets/fonts/DiablogueRegular.woff2') format('woff2'),
-			url('/assets/fonts/DiablogueRegular.woff') format('woff');
-		font-weight: normal;
-		font-style: normal;
-		font-display: swap;
-	}
-
 	p {
 		margin: auto;
 		margin-bottom: 1.5rem;
