--- a/src/components/Screenshot.astro
+++ b/src/components/Screenshot.astro
@@ -13,7 +13,7 @@
 <style>
 	img {
 		width: 100%;
-		margin-bottom: 0.5rem;
+		height: 100%;
 		transition-property: transform;
 		transition-duration: 100ms;
 		transition-timing-function: ease;
