Attempt to fix youtube embed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Main from '../components/Main.astro';
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<style global>
 		@import "../styles/base.css";
+		@import "../styles/lite-yt-embed.css";
 	</style>
 
 	<script type="module">
@@ -26,6 +27,7 @@ import Main from '../components/Main.astro';
 	</script>
 
 	<script defer data-domain="amelitegame.com" src="https://plausible.io/js/plausible.js"></script>
+	<script defer src="/js/lite-yt-embed.js"></script>
 </head>
 <body>
 	<ParallaxHeader />
