--- a/src/components/YouTube.astro
+++ b/src/components/YouTube.astro
@@ -6,14 +6,9 @@ export interface Props {
 
 const { id, alt } = Astro.props;
 
-const style = `background-image: url('/assets/img/trailer-img.png');`;
-const url = `https://youtube.com/watch?v=${id}`;
-
 ---
-<link rel="stylesheet" href="/node_modules/lite-youtube-embed/src/lite-yt-embed.css" />
-<script type="module" src="/node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script>
-<lite-youtube videoid={id} style={style} params="modestbranding=1&rel=0">
-<!-- comment needed here for some reason -->
+<lite-youtube videoid={id} playlabel={alt} style="background-image: url('/assets/img/trailer-img.png');" params="modestbranding=1&rel=0">
+<!-- do not remove this comment -->
 </lite-youtube>
 
 <style>
