--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -67,6 +67,7 @@ import DiscordButton from '../components/DiscordButton.astro';
 		position: relative;
 		max-width: 1920px;
 		margin: auto;
+		padding-bottom: 4em;
 	}
 
 	.background0 {
@@ -103,5 +104,6 @@ import DiscordButton from '../components/DiscordButton.astro';
 		display: flex;
 		flex-wrap: wrap;
 		gap: 1em;
+		margin-top: 1em;
 	}
 </style>
