--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import ParallaxHeader from '../components/ParallaxHeader.astro';
 import Main from '../components/Main.astro';
+import Footer from '../components/Footer.astro';
 ---
 <html lang="en">
 <head>
@@ -32,5 +33,6 @@ import Main from '../components/Main.astro';
 <body>
 	<ParallaxHeader />
 	<Main />
+	<Footer />
 </body>
 </html>
