--- a/src/components/Screenshot.astro
+++ b/src/components/Screenshot.astro
@@ -17,6 +17,7 @@
 		transition-property: transform;
 		transition-duration: 100ms;
 		transition-timing-function: ease;
+		border-radius: 8px;
 	}
 
 	img:hover {
