--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -1,6 +1,17 @@
-<a href="https://discord.com">
-	<span>Discord</span>
-	<img src="/assets/img/discord-logo.svg" alt="" role="presentation">
+---
+export interface Props {
+	text: string;
+	iconUrl: string;
+	linkUrl: string;
+}
+
+const { text, iconUrl, linkUrl } = Astro.props;
+
+---
+
+<a href={linkUrl}>
+	<span>{text}</span>
+	<img src={iconUrl} alt="" role="presentation">
 </a>
 <style>
 	a {
@@ -8,7 +19,6 @@
 		background-color: #444;
 		color: #fff;
 		text-decoration: none;
-		text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 		border-radius: 4px;
 		display: flex;
 		align-items: center;
@@ -18,8 +28,7 @@
 
 	a:hover,
 	a:focus {
-		background-color: #91a6f0;
-		box-shadow: 0 0 16px 0 #7289da44;
+		background-color: #666;
 	}
 
 	img {
