--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -101,6 +101,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		display: flex;
 		justify-content: center;
 		gap: 1em;
+		flex-wrap: wrap;
 	}
 
 	.screenshots {
