--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -17,6 +17,7 @@
 		margin: auto;
 		margin-bottom: 3em;
 		font-size: 1.1em;
+		justify-content: space-between;
 	}
 
 	a:hover,
@@ -28,5 +29,11 @@
 	img {
 		height: 1.5em;
 		margin-left: 0.75em;
+	}
+
+	@media screen and (max-width: 500px) {
+		a {
+			width: 100%;
+		}
 	}
 </style>
