--- a/src/components/Screenshot.astro
+++ b/src/components/Screenshot.astro
@@ -18,6 +18,7 @@
 		transition-duration: 100ms;
 		transition-timing-function: ease;
 		border-radius: 8px;
+		max-width: 480px;
 	}
 
 	img:hover {
@@ -27,5 +28,6 @@
 	a {
 		flex-grow: 1;
 		display: inline-block;
+		text-align: center;
 	}
 </style>
