--- a/src/styles/lite-yt-embed.css
+++ b/src/styles/lite-yt-embed.css
@@ -62,6 +62,9 @@ lite-youtube > .lty-playbtn {
 lite-youtube:hover > .lty-playbtn,
 lite-youtube .lty-playbtn:focus {
     filter: none;
+}
+
+lite-youtube .lty-playbtn:focus {
     outline: 2px solid #fff !important;
 	border-radius: 16px;
 }
