Add custom cursor

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,6 +5,7 @@
 		</small>
 		<nav>
 			<ul>
+				<li><a href="#">Steam</a></li>
 				<li><a href="#">Discord</a></li>
 				<li><a href="#">Facebook</a></li>
 				<li><a href="#">Instagram</a></li>
