--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -48,7 +48,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 <style>
 	p {
 		margin: auto;
-		margin-bottom: 1.5rem;
+		margin-bottom: 1.5em;
 		text-align: left;
 	}
 
