--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,8 @@ import Footer from '../components/Footer.astro';
 	<title>Amelite - Out soon on Steam!</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="icon" type="image/png" href="/favicon-40x40.png" />
+
 	<style global>
 		@import "../styles/base.css";
 		@import "../styles/lite-yt-embed.css";
