Start tracking outbound links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,8 +29,8 @@ import Footer from '../components/Footer.astro';
 		});
 	</script>
 
-	<script defer data-domain="amelitegame.com" src="https://plausible.io/js/plausible.js"></script>
 	<script defer src="/js/lite-yt-embed.js"></script>
+	<script defer data-domain="amelitegame.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 </head>
 <body>
 	<ParallaxHeader />
