--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import ParallaxHeader from '../components/ParallaxHeader.astro';
-import Main from '../components/Main.astro';
+import WallSlide from '../components/WallSlide.astro';
 import Footer from '../components/Footer.astro';
+import Main from '../components/Main.astro';
 ---
 <html lang="en">
 <head>
@@ -34,6 +35,7 @@ import Footer from '../components/Footer.astro';
 </head>
 <body>
 	<ParallaxHeader />
+	<WallSlide />
 	<Main />
 	<Footer />
 </body>
