--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -1,11 +1,9 @@
 <div class="awards">
 	<div>
-		<img src="/assets/img/awards/best-in-show.webp"      alt="Gotland Game Conference Award: Best in show" />
-		<img src="/assets/img/awards/best-game-feel.webp"    alt="Gotland Game Conference Award: Best game feel" />
+		<img src="/assets/img/awards/best-in-show.webp" alt="Gotland Game Conference Award: Best in show" /><img src="/assets/img/awards/best-game-feel.webp" alt="Gotland Game Conference Award: Best game feel" />
 	</div>
 	<div>
-		<img src="/assets/img/awards/best-level-design.webp" alt="Gotland Game Conference Award: Best level design" />
-		<img src="/assets/img/awards/best-presentation.webp" alt="Gotland Game Conference Award: Best presentation" />
+		<img src="/assets/img/awards/best-level-design.webp" alt="Gotland Game Conference Award: Best level design" /><img src="/assets/img/awards/best-presentation.webp" alt="Gotland Game Conference Award: Best presentation" />
 	</div>
 </div>
 
